--- a/Виртуальная функция/Виртуальная функция/Виртуальная функция.vcxproj
+++ b/Виртуальная функция/Виртуальная функция/Виртуальная функция.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{ae2ad560-25a7-44a4-90a2-e67d1c9a19c1}</ProjectGuid>
-    <RootNamespace>Домашнеезаданиепо5блоку</RootNamespace>
+    <ProjectGuid>{4cf5105e-6a71-4c89-bb95-01b05cd57b74}</ProjectGuid>
+    <RootNamespace>Виртуальнаяфункция</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -100,11 +100,10 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <WarningLevel>Level4</WarningLevel>
+      <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -128,14 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Choco.cpp" />
-    <ClCompile Include="Домашнее задание по 5 блоку.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Choco.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ClassDiagram.cd" />
+    <ClCompile Include="Виртуальная функция.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
