--- a/ФРУКТЫ_классы/ФРУКТЫ_классы/ФРУКТЫ_классы.vcxproj.filters
+++ b/ФРУКТЫ_классы/ФРУКТЫ_классы/ФРУКТЫ_классы.vcxproj.filters
@@ -15,15 +15,30 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Домашнее задание по 5 блоку.cpp">
+    <ClCompile Include="ФРУКТЫ_классы.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="Choco.cpp">
+    <ClCompile Include="Fruit.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="Vegetable.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="Avocado.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Choco.h">
+    <ClInclude Include="IFood.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Fruit.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Vegetable.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Avocado.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
