--- a/Наследование/Наследование/Наследование.vcxproj.filters
+++ b/Наследование/Наследование/Наследование.vcxproj.filters
@@ -15,15 +15,15 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Домашнее задание по 5 блоку.cpp">
+    <ClCompile Include="Наследование.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="Choco.cpp">
+    <ClCompile Include="Fruit.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Choco.h">
+    <ClInclude Include="Fruit.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
