--- a/ФРУКТЫ_классы/ФРУКТЫ_классы/ФРУКТЫ_классы.vcxproj
+++ b/ФРУКТЫ_классы/ФРУКТЫ_классы/ФРУКТЫ_классы.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{ae2ad560-25a7-44a4-90a2-e67d1c9a19c1}</ProjectGuid>
-    <RootNamespace>Домашнеезаданиепо5блоку</RootNamespace>
+    <ProjectGuid>{0b5c5887-c0f5-4134-a55c-a2a464507850}</ProjectGuid>
+    <RootNamespace>ФРУКТЫклассы</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -100,11 +100,10 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <WarningLevel>Level4</WarningLevel>
+      <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -128,11 +127,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Choco.cpp" />
-    <ClCompile Include="Домашнее задание по 5 блоку.cpp" />
+    <ClCompile Include="Avocado.cpp" />
+    <ClCompile Include="Fruit.cpp" />
+    <ClCompile Include="Vegetable.cpp" />
+    <ClCompile Include="ФРУКТЫ_классы.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Choco.h" />
+    <ClInclude Include="Avocado.h" />
+    <ClInclude Include="Fruit.h" />
+    <ClInclude Include="Vegetable.h" />
+    <ClInclude Include="IFood.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
