Поиск подстрока Кнут

--- a/Алгоритм КМП/Алгоритм КМП/Алгоритм КМП.vcxproj.filters
+++ b/Алгоритм КМП/Алгоритм КМП/Алгоритм КМП.vcxproj.filters
@@ -15,19 +15,8 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Связанные списки.cpp">
+    <ClCompile Include="Алгоритм КМП.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="List.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Node.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="List.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
   </ItemGroup>
 </Project>
