--- a/Алгоритм КМП/Алгоритм КМП/Алгоритм КМП.vcxproj
+++ b/Алгоритм КМП/Алгоритм КМП/Алгоритм КМП.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{252b2eb7-688a-46d1-a145-b36796fb93b4}</ProjectGuid>
-    <RootNamespace>Связанныесписки</RootNamespace>
+    <ProjectGuid>{e9305390-7db8-4c35-a041-8a9df000e35a}</ProjectGuid>
+    <RootNamespace>АлгоритмКМП</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,12 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="List.cpp" />
-    <ClCompile Include="Связанные списки.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="List.h" />
-    <ClInclude Include="Node.h" />
+    <ClCompile Include="Алгоритм КМП.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
