--- a/Поиск подстроки/Поиск подстроки/Поиск подстроки.vcxproj
+++ b/Поиск подстроки/Поиск подстроки/Поиск подстроки.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{252b2eb7-688a-46d1-a145-b36796fb93b4}</ProjectGuid>
-    <RootNamespace>Связанныесписки</RootNamespace>
+    <ProjectGuid>{7c916366-8c9d-430f-b9f6-1ddfe419e62e}</ProjectGuid>
+    <RootNamespace>Поискподстроки</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,12 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="List.cpp" />
-    <ClCompile Include="Связанные списки.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="List.h" />
-    <ClInclude Include="Node.h" />
+    <ClCompile Include="Поиск подстроки.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
