--- a/Стек/Стек/Стек.vcxproj
+++ b/Стек/Стек/Стек.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{252b2eb7-688a-46d1-a145-b36796fb93b4}</ProjectGuid>
-    <RootNamespace>Связанныесписки</RootNamespace>
+    <ProjectGuid>{d268954f-b639-4766-9139-b777b311772c}</ProjectGuid>
+    <RootNamespace>Стек</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,12 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="List.cpp" />
-    <ClCompile Include="Связанные списки.cpp" />
+    <ClCompile Include="Steck.cpp" />
+    <ClCompile Include="Стек.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="List.h" />
-    <ClInclude Include="Node.h" />
+    <ClInclude Include="Stack.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
