--- a/Поиск в ширину BFS/Поиск в ширину BFS/Поиск в ширину BFS.vcxproj
+++ b/Поиск в ширину BFS/Поиск в ширину BFS/Поиск в ширину BFS.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{51694441-f2bb-45bb-9e92-c650578a5217}</ProjectGuid>
-    <RootNamespace>DZ127</RootNamespace>
+    <ProjectGuid>{39eff385-5bf5-472e-8777-9949f5677312}</ProjectGuid>
+    <RootNamespace>ПоисквширинуBFS</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="DZ 12.7.cpp" />
+    <ClCompile Include="Поиск в ширину BFS.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
